--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos Dev da Alura</title>
+    <title>Lista de Cursos Dev da Alura</title>
 </head>
 
 <body>
