--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando Containers Sem Dor de Cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Softwares</li>
