--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando Containers Sem Dor de Cabeça</li>
-        <li>Ansible: Infraestrutura em Código</li>
+        <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Softwares</li>
         <li>Kubernetes</li>
     </ul>
