--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>Docker: Criando Containers Sem Dor de Cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Softwares</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes: Introdução à Orquestração de Conteiners</li>
     </ul>
 </body>
 </html>
